--- a/task13-task1/index.html
+++ b/task13-task1/index.html
@@ -30,7 +30,7 @@
             <option value="Prefer not to say">Prefer not to say</option>
             <option value="Male">Male</option>
             <option value="Female">Female</option>
-          </select>
+          </select><br>
                     <label for="Food">Choice of Food :</label><br>
                     <select name="" id="food">
             <option value="North Indian Food">North Indian Food</option>
@@ -53,7 +53,7 @@
                     <select name="" id="country" required>
             <option value="India">India</option>
           </select>
-                </div>
+                </div><br>
                 <button class="submit" type="submit" name="" id="" onclick="addetails()">
             Submit
           </button>
